--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,6 @@
-sudo: false
-
 language: bash
+  
+script:
 
-addons:
-
-        apt:
-
-                sources:
-
-                        - sourceline:'ppa:duggan/bats'
-
-                packages:
-
-                        - bats
-
-                        - bc
-
-script: bats ./test-report5.sh
-
+ - echo Travis CI test in .travis.yml
+ - ./test-report5.sh
